# icd11-multiagent-rag

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
apps/api/: main.py  state.py
apps/api/routers/: batch.py  health.py  sessions.py
apps/ui/: app.py
configs/: app.yaml
core/agents/: __init__.py  auditor.py  base.py  client.py  diagnostician.py  prompts.py  therapist.py
core/orchestration/: graph.py  nodes.py  state.py
core/retrieval/: __init__.py  query_builder.py  retrievers.py
core/safety/: risk_gate.py
core/schemas/: diagnosis.py  session.py
evals/metrics/: .gitkeep
evals/profiles/: anxiety_basic.json  schema.json
evals/reports/templates/: .gitkeep
evals/suites/: standard.yaml
knowledge/indexing/: chroma_builder.py  chunker.py
knowledge/ingest/: normalizer.py  pdf_parser.py
notebook/: icd11_multiagent_rag_validation.ipynb
scripts/: diagnose_chroma.py  download_models.py  validate_rag.py
tests/: conftest.py  test_agents.py  test_auditor.py  test_client_agent.py  test_diagnostician.py  test_nodes.py  test_prompts.py  test_retrieval.py  test_risk_gate.py
